--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: #F3F3F3;
+  background-color: #e6e0e0;
   overflow-x: hidden;
 }
 
@@ -20,6 +20,11 @@ body {
 .splash-title {
   font-family: 'Bangers', cursive;
   font-size: 10rem;
+}
+
+.splash-title2 {
+  font-family: serif;
+  font-size: 6rem;
 }
 
 .splash-battleship-image {
@@ -45,7 +50,7 @@ body {
 }
 
 .btn:hover, .btn:focus {
-  background-color: hsl(30, 100%, 40%);
+  background-color: hsl(122, 100%, 40%);
 }
 
 .splash-btn {
@@ -238,8 +243,8 @@ body {
   content: '';
   position: absolute;
   border-radius: 100%;
-  width: 2vmin;
-  height: 2vmin;
+  width: 3vmin;
+  height: 3vmin;
 }
 
 .miss::after {
@@ -256,12 +261,12 @@ body {
   animation: hit .2s ease-out forwards;
   border: 1vmin solid white;
   border-radius: 100%;
-  width: 2vmin;
-  height: 2vmin;
+  width: 3vmin;
+  height: 3vmin;
 }
 
 .boom {
-  animation: boom .2s ease-out forwards;
+  animation: boom .5s ease-out forwards;
 }
 
 @keyframes hit {
@@ -304,4 +309,69 @@ body {
 
 .draggable {
   touch-action: none
+}
+
+.eyes {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  column-gap: 100px;
+  opacity: 1;
+}
+
+.eye {
+  width: 85px;
+  height: 90px;
+  border-radius: 100%;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
+}
+
+.pupil {
+  width: 40px;
+  height: 40px;
+  border-radius: 101px;
+  background-color: #000;
+  opacity: 1;
+}
+
+.splash-background-image {
+  position: absolute;
+  top: 1vh;
+  right: 10vh;
+  width: 100%;
+  transform: rotateY(180deg);
+  pointer-events: none;
+  opacity: .4;
+}
+
+.eyes3 {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: left;
+  align-items: left;
+  flex-direction: row;
+  column-gap: 100px;
+  opacity: 1;
+  margin-left: 50px;
+}
+
+
+.eyes2 {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: right;
+  align-items: right;
+  flex-direction: row;
+  column-gap: 100px;
+  opacity: 1;
+  margin-right: 50px;
 }
